fix text alignment in import tables

--- a/public/stylesheets/extra.css
+++ b/public/stylesheets/extra.css
@@ -1387,3 +1387,11 @@ body {
 .alt-page .logo {
   top: 16px;
 }
+
+.hebrew .table-box table thead td {
+  text-align: right;
+}
+
+.hebrew .table-box table td {
+  text-align: right;
+}
